apps/downloads/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: radarr  
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:amd64-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              name: http-radarr
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 7878
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: radarr-config
            - mountPath: /movies
              name: radarr-movies
            - mountPath: /data
              name: radarr-downloads      
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: pvc-radarr-config
        - name: radarr-movies
          persistentVolumeClaim:
            claimName: pvc-radarr-movies
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: pvc-radarr-downloads
