apps/downloads/radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-radarr
  namespace: downloads
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: http-radarr
  selector:
    app: radarr
