apps/downloads/radarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: downloads  
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: radarr.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-radarr
            port:
              number: 9696
